--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,8 +56,8 @@ jobs:
           cd helm-chart
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git add values/auth-service.yaml
-          git commit -m "Update auth-service image tag to ${{ env.TAG }}"
+          git add values/app1.yaml
+          git commit -m "Update app1 image tag to ${{ env.TAG }}"
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
